external-crates/move/crates/move-compiler/tests/move_2024/expansion/entry_macro.move
module a::m {
    // cannot have entry macro
    entry macro fun foo() {}
}
